<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="299dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:text="@string/Boas_vindas"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/tree" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="221dp"
        android:layout_height="91dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/Introducao_aplicativo"
        android:text="@string/aqui_podera_fazer_uma_rapida_avalia_o_fisica_para_ter_uma_base_de_como_come_ar_cuidar_mais_de_sua_saude"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="Aqui podera fazer uma rapida avaliação fisica para ter uma base de como começar cuidar mais de sua saude" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:onClick="proximo"
        android:text="@string/vamos_come_ar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>