<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="29dp"
        android:text="@string/instruções"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editAltura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAltura"
        android:layout_width="102dp"
        android:layout_height="0dp"
        android:layout_marginBottom="27dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editPeso"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/editIdade"
        app:layout_constraintEnd_toEndOf="@+id/editIdade"
        app:layout_constraintStart_toStartOf="@+id/editIdade"
        app:layout_constraintTop_toBottomOf="@+id/editAltura" />

    <EditText
        android:id="@+id/editIdade"
        android:layout_width="110dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/idade"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPeso" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:onClick="calcular"
        android:text="@string/proseguir"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="221dp"
        android:layout_height="0dp"
        android:layout_marginBottom="110dp"
        android:text="@string/vamos_usar_as_informa_es_acima_para_calcular_seu_indice_de_massa_corporal_e_taxa_de_metabolismo_bassal"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editIdade" />

    <Button
        android:id="@+id/button4"
        android:layout_width="117dp"
        android:layout_height="0dp"
        android:layout_marginBottom="93dp"
        android:onClick="voltar1"
        android:text="Voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>